--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,8 +33,7 @@ $enable-shadows: false;
 
 /********** Custom CSS ************/
 h1,
-h2,
-h3,
+
 h4,
 h5,
 h6 {
@@ -186,4 +185,67 @@ h6 {
         margin: -150px auto 15px auto;
         padding: 30px;
     }
+}
+
+
+
+
+
+
+.banner
+{
+    height: 80vh ;
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5),url(img));
+    background-size: cover;
+    background-position:center;
+
+    color: #fff;
+}
+.banner h2
+{
+    padding-top: 150px;
+    font-size: 50px;
+    letter-spacing: 6px;
+    font-weight: 600px ;
+    text-shadow: 0 0 30px rgba(0,0,0,0.5);
+}
+
+
+.search-job
+{
+    padding: 30px 0;
+    margin: -50px 6% 50px;
+    background-image: linear-gradient(to right, #6db9ef, #7ce08a );
+}
+
+.search-job .form-control
+{
+         max-width:  250px;
+        display: inline-flex;
+        margin: 10px 5 px;
+        border-radius:0;
+        box-shadow: none !important;
+        border: none !important;
+ }
+
+.search-job .btn-dark
+{
+         border-radius: 0;
+         box-shadow: none;
+         border: none;
+         display: inline-flex;
+         margin: 5px;
+         padding: 5px 20px;
+}
+
+#recruiters img{
+
+    max-width: 100px;
+    margin: 10px 20px;
+}
+
+#jobs
+{
+        background-color: #E45F4E;
+        padding: 50px; 
 }
